--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.13.0",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
+    "gulp-data": "^1.2.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^3.0.1",
     "gulp-nunjucks-render": "^2.0.0",
@@ -20,6 +21,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
+    "gulp-yaml": "^1.0.1",
     "run-sequence": "^1.2.2"
   }
 }
